feat(auth): Autenticación JWT
- Se han añadido las dependencias org.mapstruct:mapstruct, io.jsonwebtoken:jjwt-api, io.jsonwebtoken:jjwt-impl y io.jsonwebtoken:jjwt-jackson.

- Se ha creado el objeto AuthenticatedUser que implementa UserDetails de SpringBoot para que Spring lo utilice en el contexto de seguridad.

- Se ha implementado el servicio UserDetailsService de SpringBoot para cargar la información de un usuario y que Spring pueda autenticar un usuario para mantener dicha información en su contexto de seguridad.

- Se ha creado el provider AuthenticationProvider para poder obtener información del usuario autenticado del contexto de seguridad de Springboot.

- Se ha creado el manager TokenJwtManager para poder crear, validar y obtener información de los token JWT.

- Se ha creado la clase de propiedades TokenProperties para añadir propiedades relacionadas con los tokens JWT.

- Se ha actualizado la configuración del ignore-paths para poder ignorar endpoints clasificados por su método http.

- Se ha creado la clase SecurityUtils con métodos para comprobar si un endpoint (http method + path) es público o esta securizado a partir de la configuración establecida.

- Se ha creado la entidad JPA Token y el repositorio TokenRepository para poder recuperar registrar los tokens generados por cuenta y poder revocarlos.

- Se ha actualizado el script SQL que crea las tablas en la base de datos para añadir la tabla de los tokens.

- Se ha creado el servicio AuthenticationService para poder registrar, autenticar usuarios, actualizar tokens de acceso y revocarlos.

- Se han creado los DTOs necesarios para el funcionamiento del servicio de autenticación.

- Se ha actualizado el repositorio AccountRepository para poder recuperar una cuenta a partir de su email, el username y el identificador del propietario de la cuenta.

- Se han creado los mappers con Mapstructs para mapear entidades a dtos.

- Se ha establecido en el contexto de Spring el bean de SpringBoot AuthenticationMa