@@ -1,6 +1,6 @@
 package com.codenaiten.template.rest.boot.config;
 
-import com.codenaiten.template.rest.app.properties.SecurityProperties;
+import com.codenaiten.template.rest.app.authentication.SecurityUtils;
 import io.swagger.v3.oas.annotations.OpenAPIDefinition;
 import io.swagger.v3.oas.annotations.enums.SecuritySchemeType;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
@@ -9,9 +9,8 @@ import lombok.RequiredArgsConstructor;
 import org.springdoc.core.models.GroupedOpenApi;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.util.AntPathMatcher;
 
-import java.util.List;
+import java.util.Collections;
 
 @Configuration
 @RequiredArgsConstructor
@@ -19,7 +18,7 @@ import java.util.List;
 @OpenAPIDefinition( security = @SecurityRequirement( name = "bearerAuth" ))
 public class OpenApiConfig {
 
-    private final SecurityProperties securityProperties;
+    private final SecurityUtils securityUtils;
 
 // ------------------------------------------------------------------------------------------------------------------ \\
 // ---| PUBLIC GROUP |----------------------------------------------------------------------------------------------- \\
@@ -27,26 +26,19 @@ public class OpenApiConfig {
 
     @Bean
     public GroupedOpenApi publicGroup() {
-        final var matcher = new AntPathMatcher();
-
         return GroupedOpenApi.builder().group( "public" ).pathsToMatch( "/**" )
                 .addOpenApiCustomizer(openApi -> {
                     if( openApi.getPaths() == null ) return;
-
-                    final List<String> publicPaths = this.securityProperties.getIgnorePaths();
-                    if( publicPaths == null || publicPaths.isEmpty() ) return;
-
-                    openApi.getPaths().forEach(( path, item ) -> {
-                        boolean isPublic = publicPaths.stream()
-                                .map( String::trim )
-                                .filter( s -> !s.isEmpty() )
-                                .anyMatch( p -> matcher.match( p, path ));
-                        if( isPublic ) item.readOperations().forEach( op -> op.setSecurity( List.of() ));
-                    });
+                    openApi.getPaths().forEach(( path, item ) ->
+                        item.readOperationsMap().forEach(( httpMethod, operation ) -> {
+                            if( this.securityUtils.isPublicEndpoint( httpMethod.name(), path ))
+                                operation.setSecurity( Collections.emptyList() );
+                        })
+                    );
                 })
                 .build();
     }
-
+    
 // ------------------------------------------------------------------------------------------------------------------ \\
 
 }
